User input themes style

--- a/src/styles/ReflectionForm.scss
+++ b/src/styles/ReflectionForm.scss
@@ -2,3 +2,17 @@
   font-size: 1.325rem;
   border-bottom: 1px dotted #ccc;
 }
+
+.reflection--intro-text {
+  margin-bottom: 2rem;
+}
+
+.reflection-themes--item-close {
+  float: right;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.reflection-themes--button-wrapper {
+  text-align: right;
+}
