Improve styles of input form
Utilizing input form group with button conveys a sense of action (press enter) but also gives a clickable area

--- a/src/styles/ReflectionForm.scss
+++ b/src/styles/ReflectionForm.scss
@@ -16,3 +16,13 @@
 .reflection-themes--button-wrapper {
   text-align: center;
 }
+
+.reflection-themes--form {
+  input {
+    height: 2.4375rem; // override so that the submit button doesn't push the pixel height
+  }
+
+  .input-group-field {
+    border-right: none !important;
+  }
+}
