--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,5 @@
 @import "~foundation-sites/scss/foundation";
+@import "~quill/dist/quill.snow.css";
 @include foundation-everything(true);
 
 html, body {
