--- a/src/styles/CircleProgress.scss
+++ b/src/styles/CircleProgress.scss
@@ -1,4 +1,10 @@
 .circleprogress-component {
+  &.complete {
+    .circle.filled {
+      background: rgb(63, 173, 97);
+    }
+  }
+
   .circle {
     display: inline-block;
     width: 10px;
@@ -12,7 +18,7 @@
 
     &.filled {
       border: 0;
-      background: rgb(63, 173, 97);
+      background: #EFA217;
     }
   }
 }
