toggle the reflection collection body from being shown or not

--- a/src/styles/reflection/PreviousReflections.scss
+++ b/src/styles/reflection/PreviousReflections.scss
@@ -3,6 +3,12 @@
   font-size: 1.1em;
 }
 
+.reflection-collection--show-body {
+  margin-left: 18px;
+  color: #777;
+  font-size: 0.8rem;
+}
+
 .reflection-collection--reflection {
   h5 {
     border-bottom: 1px dotted #ccc;
